cmake_minimum_required(VERSION 3.20)

# Solution
project(Qt.Widgets)

add_subdirectory(HelloWorlds)
add_subdirectory(Applications)
add_subdirectory(CommonControls)
add_subdirectory(CommonDialogs)
add_subdirectory(CustomControls)
add_subdirectory(Components)
add_subdirectory(ContainerControls)
add_subdirectory(MenusAndToolbars)
add_subdirectory(Others)
