cmake_minimum_required(VERSION 3.20)

# Solution
project(Qt.Widgets)

add_subdirectory(HelloWorlds)
add_subdirectory(Applications)
add_subdirectory(Windows)
add_subdirectory(Dialogs)
add_subdirectory(MenusAndToolbars)
add_subdirectory(Containers)
add_subdirectory(Controls)
add_subdirectory(Components)
add_subdirectory(UserControls)
add_subdirectory(Others)
add_subdirectory(Tests)
