cmake_minimum_required(VERSION 3.2)

# Solution
project(CommonControls)

# Common Controls
add_subdirectory(CheckBox)
add_subdirectory(CheckedListWidget)
add_subdirectory(ComboBox)
add_subdirectory(DoubleSpinBox)
add_subdirectory(Label)
add_subdirectory(LCDNumber)
add_subdirectory(LineEdit)
add_subdirectory(ListView)
add_subdirectory(ListView2)
add_subdirectory(ListWidget)
add_subdirectory(PictureBox)
add_subdirectory(PictureBox2)
add_subdirectory(ProgressBar)
add_subdirectory(PushButton)
add_subdirectory(RadioButton)
add_subdirectory(Slider)
add_subdirectory(SpinBox)
add_subdirectory(SpinButton)
add_subdirectory(ToggleButton)
add_subdirectory(TreeView)
add_subdirectory(TreeWidget)
add_subdirectory(Widget)
