cmake_minimum_required(VERSION 3.2)

# Solution
project(CommonDialogs)

# Dialogs
add_subdirectory(AboutBox)
add_subdirectory(ColorDialog)
add_subdirectory(FolderBrowserDialog)
add_subdirectory(FontDialog)
add_subdirectory(InputDialog)
add_subdirectory(MessageBox)
add_subdirectory(OpenFileDialog)
add_subdirectory(SaveFileDialog)
