cmake_minimum_required(VERSION 3.2)

project(RadioButton VERSION 1.0.0)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

if(MSVC)
  set(GUI_OPTION WIN32)
elseif (APPLE)
  set(GUI_OPTION MACOSX_BUNDLE)
elseif(UNIX)
  set(GUI_OPTION )
endif ()

find_package(Qt5Widgets)

add_executable(RadioButton ${GUI_OPTION} RadioButton.cpp)
target_link_libraries(RadioButton Qt5::Widgets)